--- a/Source/ReferenceTests/ReferenceTests.csproj
+++ b/Source/ReferenceTests/ReferenceTests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Commands\AddTypeTests.cs" />
     <Compile Include="Commands\WhereObjectTests.cs" />
     <Compile Include="Integration\RosettaCode.cs" />
+    <Compile Include="Language\FileRedirectionTests.cs" />
     <Compile Include="Language\ObjectMemberTests.cs" />
     <Compile Include="Language\Operators\FormatOperatorTests_7_5.cs" />
     <Compile Include="Language\Operators\BitwiseTests.cs" />
