--- a/Source/System.Management/System.Management.csproj
+++ b/Source/System.Management/System.Management.csproj
@@ -423,6 +423,8 @@
     <Compile Include="Pash\BitwiseOperation.cs" />
     <Compile Include="Pash\Implementation\CommonCmdlet.cs" />
     <Compile Include="Pash\Implementation\CommonCmdletParameters.cs" />
+    <Compile Include="Pash\Implementation\ExecutionVisitorHelper\FileRedirectionVisitor.cs" />
+    <Compile Include="Pash\Implementation\ExecutionVisitorHelper\RedirectionVisitor.cs" />
     <Compile Include="Pash\Implementation\getline.cs" />
     <Compile Include="Pash\Implementation\CommandManager.cs" />
     <Compile Include="Pash\Implementation\CommandProcessor.cs" />
@@ -514,7 +516,5 @@
   <ItemGroup>
     <Content Include="Pash\ParserIntrinsics\README.TXT" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pash\Implementation\ExecutionVisitorHelper\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
